[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bluetooth-mesh-bluez"
version = "1.0.0"
readme = "README.rst"
requires-python = ">=3.14,<3.15"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Lowas-Rzechonek", email = "michal.lowas-rzechonek@silvair.com" },
    { name = "Amadeusz Herzog", email = "amadeusz.hercog@silvair.com" },
    { name = "Jakub Witowski", email = "jakub.witowski@silvair.com" },
    { name = "Kamil Janowski", email = "kamil.janowski@silvair.com" },
    { name = "Przemysław Fierek", email = "przemyslaw.fierek@silvair.com" },
    { name = "Rafał Gajda", email = "rafal.gajda@silvair.com" },
    { name = "Patryk Bieleń", email = "patryk.bielen@silvair.com" }
]
dependencies = [
    "bluetooth-mesh-messages>=1.0.0,<1.1.0",
    "bluetooth-mesh-network>=1.0.0,<1.1.0",
    "dbus-next>=0.2.3,<0.3.0",
    "pluggy>=1.6.0,<1.7.0",
    "marshmallow>=4.2.3,<4.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
]

[tool.poetry]
package-mode = true
requires-poetry = ">=2.2.1"
packages = [{ include = "bluetooth_mesh" }]

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = { extras = ["colors"], version = "^8.0.1" }
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pylint = "^4.0.5"

[tool.black]
line-length = 110
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 110
combine_as_imports = true
known_first_party = ["bluetooth_mesh"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-few-public-methods",
]
enable = [
    "useless-suppression",
]
fail-on = "useless-suppression"

[tool.pylint.design]
max-args = 8
max-positional-arguments = 9

[tool.pylint.main]
py-version = "3.14"
evaluation = "10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10) - ((error + warning + refactor + convention + info) * 0.01)"

[tool.pylint.format]
max-line-length = 110
